--- a/index.html
+++ b/index.html
@@ -25,7 +25,32 @@
           <h1>Ceran Budak</h1>
         </header>
 
-    
+
+      <h2>About Me</h2>
+      <p>
+      I am an Assistant Professor at the <a target="_blank" href="https://www.si.umich.edu/">University of Michigan
+      School of Information</a>. Before that, I was a Postdoctoral Researcher at <a target="_blank" href="http://research.microsoft.com/en-us/labs/newyork/">Microsoft Research New York</a>.
+      I received my PhD from the <a target="_blank" href="http://www.cs.ucsb.edu/">Computer Science Department</a> at University of California, Santa Barbara in December 2012.
+      I received my Bachelors degree from Computer Science Department at Bilkent University in Turkey in 2007.
+      </p>
+
+      <p>My research interests lie in the area of computational social science; 
+      a discipline at the intersection of computer science, statistics, and the social sciences. 
+      I am particularly interested in applying large scale data analysis techniques to study problems with social, 
+      political, and policy implications.
+      </p>
+
+      <h2>Prospective Students</h3>
+
+      <p>Prospective PhD students must first be admitted to UMSI's PhD program before they can work with an individual advisor. 
+        If you are interested in working with me, please first <a href="https://www.si.umich.edu/academics/admissions/phd-application-requirements">apply</a> to our program and then drop me an email.
+        Undergraduate and Masters students who have already been admitted to the University of Michigan and are interested 
+        in working on computational social science problems are welcome to contact me. 
+        Include your interests, degree, major, and resume in your email. </p>
+
+    </div>
+
+  
         <footer>
           <p>University of Michigan School of Information <br/>
             &copy; Ceran Budak 2019-2020</p>
