--- a/engagement.html
+++ b/engagement.html
@@ -8,7 +8,6 @@
 </head>
 <body>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
-        <div class="container">
         <div class="nav">
           <nav>
             <ul class='nav-links'>
@@ -20,9 +19,23 @@
             </ul>
           </nav>
         </div>
+        <div class="container">
+            <div class="projects">
+                <h2>Projects</h2>
+            </div>
+            <div class="teaching"> 
+                <h2>Teaching</h2>
+            </div>
+            <div class="service"> 
+                <h2>Service</h2>
+            </div>
+        </div>
+      
         <header id="main">
           <h1>Ceran Budak</h1>
         </header>
+
+
 
     
         <footer>
