Added embedded CV

--- a/cv.html
+++ b/cv.html
@@ -21,10 +21,14 @@
           </nav>
         </div>
         <header id="main">
-          <h1>Ceran Budak</h1>
+          <h1>Ceren Budak</h1>
         </header>
+          <iframe src="./files/cv.pdf"></iframe>
 
-    
+          <!-- Bootstrap core JavaScript, need to download Bootstrap to use...check if necessary. -->
+          <!-- <script src="./files/jquery.min.js.download"></script>
+          <script src="./files/bootstrap.bundle.min.js.download"></script> -->
+
         <footer>
           <p>University of Michigan School of Information <br/>
             &copy; Ceran Budak 2019-2020</p>
