--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
               <p>
               Examples studies: In 
               <a target=_blank a href="publications.html">our recent work</a> we introduced a new methodology for quantifying how a movement changes the attitudes and behavior of its participants. In <a target=_blank a href="http://cbudak.com/ICWSM2016.pdf">another recent paper</a>, we investigated the value of slacktivists for social movements. 
-              We are currently working on determining the value of Social Movement Organizations(SMOs) in online protest movements (a working paper is available <a target=_blank a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3068546">here</a>), measuring stickiness of activism and identifying the most (and least) successful recruitment methods.
+              We are currently working on determining the value of Social Movement Organizations(SMOs) in online protest movements (a working paper is available <a target=_blank a href="./files/fakenews.pdf">here</a>), measuring stickiness of activism and identifying the most (and least) successful recruitment methods.
               We are also working on new mathematical models of collective action that incorporate the new findings from our data-driven studies.
           </p>
 
