--- a/engagement.html
+++ b/engagement.html
@@ -89,7 +89,32 @@
             </div>
             <div class="service"> 
                 <h2>Service</h2>
-
+                <ul>
+                  <li><h4>Registration chair for COSN (ACM Conference on Online Social Networks) 2015</h4>
+                  </li>
+                  <li>
+                    <h4>Program Committee Member for:</h4>
+                    <ul>
+                      <li>WWW (International Conference on World Wide Web) 2015, 2016</li>
+                      <li>ICWSM (International AAAI Conference on Web and Social Media) 2015, 2016</li>
+                      <li>WebSci (ACM Web Science Conference) 2016</li>
+                      <li>AAAI (AAAI Conference on Artificial Intelligence) 2016</li>
+                      <li>HCOMP (Conference on Human Computation and Crowdsourcing) 2015</li>
+                      <li>WSDM(InternationalACMConferenceonWebSearchandDataMining)2014, 2015</li>
+                      <li>COSN (ACM Conference on Online Social Networks) 2014, 2015</li>
+                      <li>ICDM (IEEE International Conference on Data Mining) 2014</li>
+                      <li>SIGMOD (ACM Special Interest Group On Management of Data Conference) 2013</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <h4>Organizer for MSR NYC Data Science Seminar Series</h4>
+                    <p class="li">For more info, please visit the website.</p>
+                  </li>
+                  <li>
+                    <h4>Instructor for Microsoft Research Data Science Summer School</h4>
+                    <p>For more info, please visit the website.</p>
+                  </li>
+                </ul>
             </div>
         </div>
         <footer>
