Added Publication links and CV download button

--- a/cv.html
+++ b/cv.html
@@ -25,6 +25,7 @@
         </header>
           <iframe src="./files/cv.pdf"></iframe>
 
+          <form method="get" action="./files/cv.pdf" target="_blank"><button type="submit">Download Resume</button></form>
           <!-- Bootstrap core JavaScript, need to download Bootstrap to use...check if necessary. -->
           <!-- <script src="./files/jquery.min.js.download"></script>
           <script src="./files/bootstrap.bundle.min.js.download"></script> -->
