--- a/publications.html
+++ b/publications.html
@@ -22,77 +22,77 @@
           </nav>
         </div>
         <header id="main">
-          <h1>Ceren Budak</h1>
+          <h1>Ceran Budak</h1>
         </header>
         <h2>Published</h2>
-          <h3><a target="_blank" href="./files/fakenews.pdf">What happened? The Spread of Fake News Publisher Content During the 2016 U.S. Presidential Election</a></h3>
+          <h3>What happened? The Spread of Fake News Publisher Content During the 2016 U.S. Presidential Election</h3>
             <h4>Ceren Budak</h4>
               <p>28th International Conference on World Wide Web (WWW'19)</p>
-          <h3><a target="_blank" href="./files/blmPaper.pdf">Event-Driven Analysis of Crowd Dynamics in the Black Lives Matter Online Social Movement</a></h3>
+          <h3>Event-Driven Analysis of Crowd Dynamics in the Black Lives Matter Online Social Movement</h3>
             <h4>Hao Peng, Ceren Budak, Daniel Romero</h4>
               <p>Proc. of The Web Conference (WWW), 2019</p>
-          <h3><a target="_blank" href="./files/wiki2019.pdf">Participation of New Editors After Times of Shock on Wikipedia</a></h3>
+          <h3>Participation of New Editors After Times of Shock on Wikipedia</h3>
             <h4>Ark Fangzhou Zhang, Ruihan Wang, Eric Blohm, Ceren Budak, Lionel Robert, and Daniel Romero</h4>
               <p>Proc. 13th International AAAI Conference on Web and Social Media (ICWSM), 2019</p>
-          <h3><a target="_blank" href="./files/communitytrip.pdf">Community-Based Trip Sharing for Urban Commuting</a></h3>
+          <h3>Community-Based Trip Sharing for Urban Commuting</h3>
             <h4>Mohd. Hafiz Hasan, Pascal Van Hentenryck, Ceren Budak, Jiayu Chen, and Chhavi Chaudhry</h4>
               <p>In Proceedings of the 32nd AAAI Conference on Artificial Intelligence (AAAI'2018)</p>
-          <h3><a target="_blank" href="./files/threading.pdf">Threading is Sticky: How Threaded Conversations Promote Comment System User Retention</a></h3>
+          <h3>Threading is Sticky: How Threaded Conversations Promote Comment System User Retention</h3>
             <h4>Ceren Budak, R. Kelly Garrett, Paul Resnick, and Julia Kamin</h4>
               <p>Proc. 21st ACM Conference on Computer-Supported Cooperative Work and Social Computing (CSCW), 2018</p>
-          <h3><a target="_blank" href="./files/The_Interplay_between_Crowd_Evaluation_and_Collaborative.pdf">Crowd Development: The Interplay Between Crowd Evaluation and Collaborative Dynamics in Wikipedia</a></h3>
+          <h3>Crowd Development: The Interplay Between Crowd Evaluation and Collaborative Dynamics in Wikipedia</h3>
             <h4>Ark Fangzhou Zhang, Danielle Livneh, C. Budak, L. Robert, and D.M. Romero</h4>
               <p>Proc. 21st ACM Conference on Computer-Supported Cooperative Work and Social Computing (CSCW), 2018</p>
-          <h3><a target="_blank" href="https://aaai.org/ocs/index.php/ICWSM/ICWSM17/paper/view/15559">Is Slacktivism Underrated? Measuring the Value of Slacktivists for Online Social Movements</a></h3>
+          <h3>Is Slacktivism Underrated? Measuring the Value of Slacktivists for Online Social Movements</h3>
             <h4>Lia Bozarth, Ceren Budak</h4>
               <p>Proceedings of the Eleventh International AAAI Conference on Web and Social Media</p>
-          <h3><a target="_blank" href="https://aaai.org/ocs/index.php/ICWSM/ICWSM17/paper/view/15682">Shocking the Crowd: The Effect of Censorship Shocks on Chinese Wikipedia</a></h3>
+          <h3> Shocking the Crowd: The Effect of Censorship Shocks on Chinese Wikipedia</h3>
             <h4>Ark Fangzhou Zhang, Danielle Livneh, Ceren Budak, Lionel Robert, Daniel Romero</h4>
               <p>Proceedings of the Eleventh International AAAI Conference on Web and Social Media</p>
-          <h3><a target="_blank" href="./files/do-not-track.pdf">Understanding Emerging Threats to Online Advertising</a></h3>
+          <h3>Understanding Emerging Threats to Online Advertising</h3>
             <h4>Ceren Budak, Sharad Goel, Justin M. Rao, Giorgos Zervas</h4>
               <p>17th ACM Conference on Economics and Computation</p>
-          <h3><a target="_blank" href="https://www.aaai.org/ocs/index.php/ICWSM/ICWSM16/paper/view/13128">Measuring the Efficiency of Charitable Giving with Content Analysis and Crowdsourcing</a></h3>
+          <h3> Measuring the Efficiency of Charitable Giving with Content Analysis and Crowdsourcing</h3>
             <h4>Ceren Budak, Justin M. Rao</h4>
               <p>Proceedings of the Tenth International Conference on Web and Social Media: 32-41</p>
-          <h3><a target="_blank" href="https://academic.oup.com/poq/article/80/S1/250/2223443">Fair and Balanced? Quantifying Media Bias Through Crowdsourced Content Analysis</a></h3>
+          <h3>Fair and Balanced? Quantifying Media Bias Through Crowdsourced Content Analysis</h3>
             <h4>Ceren Budak, Sharad Goel, Justin M. Rao</h4>
               <p>Public Opinion Quarterly (2016) 80 (S1): 250-271</p>
-          <h3><a target="_blank" href="https://www.sociologicalscience.com/articles-v2-18-370/">Dissecting the Spirit of Gezi: Influence vs. selection in the Occupy Gezi movement</a></h3>
+          <h3>Dissecting the Spirit of Gezi: Influence vs. selection in the Occupy Gezi movement</h3>
             <h4>Ceren Budak, Duncan J. Watts</h4>
               <p>Sociological Science</p>
-          <h3><a target="_blank" href="https://ieeexplore.ieee.org/document/7072814?arnumber=7072814">Mind your Ps and Vs: A perspective on the challenges of big data management and privacy concerns</a></h3>
+          <h3>Mind your Ps and Vs: A perspective on the challenges of big data management and privacy concerns</h3>
             <h4>Divyakant Agrawal, Amr El Abbadi, Vaibhav Arora, Ceren Budak, Theodore Georgiou, Hatem A. Mahmoud, Faisal Nawab, Cetin Sahin, Shiyuan Wang</h4>
               <p>BigComp 2015: 1-6</p>
-          <h3><a target="_blank" href="http://www.vldb.org/pvldb/vol7/p229-budak.pdf">GeoScope: Online Detection of Geo-Correlated Information Trends in Social Networks</a></h3>
+          <h3> GeoScope: Online Detection of Geo-Correlated Information Trends in Social Networks</h3>
             <h4>Ceren Budak, Theodore Georgiou, Divyakant Agrawal, Amr El Abbadi</h4>
               <p>Proceedings of VLDB Endowment (PVLDB) 2014</p>
-          <h3><a target="_blank" href="https://link.springer.com/chapter/10.1007%2F978-3-319-05693-7_1">Big Data in Online Social Networks: User Interaction Analysis to Model User Behavior in Social Networks</a></h3>
+          <h3>Big Data in Online Social Networks: User Interaction Analysis to Model User Behavior in Social Networks</h3>
             <h4>Divyakant Agrawal, Ceren Budak, Amr El Abbadi, Theodore Georgiou, Xifeng Yan</h4>
               <p>DNIS 2014: 1-16</p>
-          <h3><a target="_blank" href="https://dl.acm.org/citation.cfm?id=2488404">On Participation in Group Chats on Twitter</a></h3>
+          <h3>On Participation in Group Chats on Twitter</h3>
             <h4>Ceren Budak, Rakesh Agrawal</h4>
               <p>22nd International Conference on World Wide Web (WWW'13)</p>
-          <h3><a target="_blank" href="https://ieeexplore.ieee.org/document/6413909?arnumber=6413909">Diffusion of Information in Social Networks: Is it All Local?</a></h3>
+          <h3>Diffusion of Information in Social Networks: Is it All Local?</h3>
             <h4>Ceren Budak, Divyakant Agrawal, Amr El Abbadi</h4>
               <p> International Conference on Data Mining (ICDM) 2012</p>
-          <h3><a target="_blank" href="http://www.vldb.org/pvldb/vol4/p646-budak.pdf">Structural Trend Analysis for Online Social Networks</a></h3>
+          <h3>Structural Trend Analysis for Online Social Networks</h3>
             <h4>Ceren Budak, Divyakant Agrawal, Amr El Abbadi</h4>
               <p>Proceedings of VLDB Endowment (PVLDB), 4(10):646656, July 2011</p>
-          <h3><a target="_blank" href="https://dl.acm.org/citation.cfm?id=1963499">Limiting the Spread of Misinformation in Social Networks</a></h3>
+          <h3>Limiting the Spread of Misinformation in Social Networks</h3>
             <h4>Ceren Budak, Divyakant Agrawal, Amr El Abbadi</h4>
               <p>Proceedings of the 20th international conference on World Wide Web (WWW'11) pages 665-674, New York, NY, USA, 2011. ACM.</p>
-          <h3><a target="_blank" href="https://dl.acm.org/citation.cfm?id=1964873">Where the Blogs Tip: Connectors, Mavens, Salesmen and Translators of the Blogosphere</a></h3>
+          <h3> Where the Blogs Tip: Connectors, Mavens, Salesmen and Translators of the Blogosphere</h3>
             <h4>Ceren Budak, Divyakant Agrawal, Amr El Abbadi</h4>
               <p>Proceedings of the First Workshop on Social Media Analytics (SOMA'10) pages: 106-114, New York, NY, USA, 2010. ACM.</p>
-          <h3><a target="_blank" href="https://dl.acm.org/citation.cfm?id=1805389">Solving Shortest Path Problems on the GPU</a></h3>
+          <h3>Solving Shortest Path Problems on the GPU</h3>
             <h4>Aydin Buluc, John R. Gilbert, Ceren Budak</h4>
               <p>Parallel Computing 36(5-6): 241-253 (2010)</p>
         <h2>Tutorials</h2>
-          <h3><a target="_blank" href="https://dl.acm.org/citation.cfm?id=2064036">Information Diffusion in Social Networks: Observing and Affecting What Society Cares About</a></h3>
+          <h3>Information Diffusion in Social Networks: Observing and Affecting What Society Cares About</h3>
             <h4>Divyakant Agrawal, Ceren Budak, Amr El Abbadi</h4>
               <p>Proceedings of the 20th ACM Conference on Information and Knowledge Management (CIKM 2011) pages: 2609-2610</p>
-          <h3><a target="_blank" href="http://www.vldb.org/pvldb/vol4/p1512-agrawal-tutorial6.pdf">Information Diffusion in Social Networks: Observing and Influencing Societal Interests</a></h3>
+          <h3> Information Diffusion in Social Networks: Observing and Influencing Societal Interests</h3>
             <h4>Divyakant Agrawal, Ceren Budak, Amr El Abbadi</h4>
               <p>Proceedings of VLDB Endowment (PVLDB), 4(12): 1512-1513 (2011)</p>
         <h2>Workshop Presentations, Book Chapters</h2>
@@ -111,13 +111,14 @@
           <h3>Structure-Aware Trend Detection in Online Social Networks</h3>
             <h4>Ceren Budak, Divyakant Agrawal, Amr El Abbadi</h4>
               <p>Workshop on Information in Networks (WIN 2011)</p>
-          <h3><a target="_blank" href="https://link.springer.com/chapter/10.1007%2F978-3-642-23535-1_3">Data-Driven Modeling and Analysis of Online Social Networks</a></h3>
+          <h3> Data-Driven Modeling and Analysis of Online Social Networks</h3>
             <h4>Divyakant Agrawal, Bassam Bamieh, Ceren Budak, Amr El Abbadi, Andrew J.Flanagin, Stacy Patterson</h4>
               <p>Web-Age Information Management, volume 6897 of Lecture Notes in Computer Science, pages 317. Springer Berlin / Heidelberg, 2011</p>
         <h2>Technical Reports</h2>
-          <h3><a target="_blank" href="https://www.microsoft.com/en-us/research/publication/inferring-user-interests-from-microblogs/?from=http%3A%2F%2Fresearch.microsoft.com%2Fapps%2Fpubs%2Fdefault.aspx%3Fid%3D217311">Inferring User Interests in Online Social Networks</a></h3>
+          <h3>Inferring User Interests in Online Social Networks</h3>
             <h4>Ceren Budak, Anitha Kannan (Microsoft Research), Rakesh Agrawal (Microsoft Research), Jan Pedersen (Microsoft)</h4>
               <p>Working Paper, MSR-TR-2014-68, May 2014</p>
+
 
         <footer>
           <p>University of Michigan School of Information <br/>
