all engagment links added

--- a/engagement.html
+++ b/engagement.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
@@ -31,7 +31,7 @@
                 <p>SI 608 - Networks covers topics in network analysis, from social networks to applications in information networks such as the internet. We introduce basic concepts in network theory, discuss metric and models, use software analysis tools to experiment with a wide variety of real-world network data, and study applications to areas such as information retrieval.</p>
 
                 <h3><a target = _blank a href = 'https://www.si.umich.edu/programs/courses/618'>SI 618 - Data Manipulation and Analysis</a></h3>
-                <p>SI 618 - Data Manipulation and Analysis aims to help students get started with their own data harvesting, processing, aggregation, and analysis. We cover a wide variety of topics such as using APIs to collect data, SQL, Spark through Python. We use R to perform exploratory data analysis. We use DataCamp for lab assignments for this part of the class so that our students can learn R in an interactive way.</p>
+                <p>SI 618 - Data Manipulation and Analysis aims to help students get started with their own data harvesting, processing, aggregation, and analysis. We cover a wide variety of topics such as using APIs to collect data, SQL, Spark through Python. We use R to perform exploratory data analysis. We use <a target = _blank a href = 'https://www.datacamp.com/'>DataCamp</a> for lab assignments for this part of the class so that our students can learn R in an interactive way.</p>
             </div>
             <div class="talks"> 
               <h2>Invited Talks</h2>
@@ -89,6 +89,33 @@
             </div>
             <div class="service"> 
                 <h2>Service</h2>
+                <h2>Service</h2>
+                <ul>
+                  <li><h4>Registration chair for COSN (ACM Conference on Online Social Networks) 2015</h4>
+                  </li>
+                  <li>
+                    <h4>Program Committee Member for:</h4>
+                    <ul>
+                      <li>WWW (International Conference on World Wide Web) 2015, 2016</li>
+                      <li>ICWSM (International AAAI Conference on Web and Social Media) 2015, 2016</li>
+                      <li>WebSci (ACM Web Science Conference) 2016</li>
+                      <li>AAAI (AAAI Conference on Artificial Intelligence) 2016</li>
+                      <li>HCOMP (Conference on Human Computation and Crowdsourcing) 2015</li>
+                      <li>WSDM(InternationalACMConferenceonWebSearchandDataMining)2014, 2015</li>
+                      <li>COSN (ACM Conference on Online Social Networks) 2014, 2015</li>
+                      <li>ICDM (IEEE International Conference on Data Mining) 2014</li>
+                      <li>SIGMOD (ACM Special Interest Group On Management of Data Conference) 2013</li>
+                    </ul>
+                  </li>
+                  <li>
+                    <h4>Organizer for MSR NYC Data Science Seminar Series</h4>
+                    <p class="li"><a target = _blank a href="http://datascienceseminar.nyc/">For more info, please visit the website.</a></p>
+                  </li>
+                  <li>
+                    <h4>Instructor for Microsoft Research Data Science Summer School</h4>
+                    <p class='li'><a target = _blank a href='https://www.microsoft.com/en-us/research/academic-program/data-science-summer-school/'>For more info, please visit the website.</a></p>
+                  </li>
+                </ul>
 
             </div>
         </div>
