--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
           <h1>Ceran Budak</h1>
         </header>
 
+        <div class="headshot-image">
+          <img src="images/cerenbudak_portrait.jpg" alt="">
+        </div>
+
 
       <h2>About Me</h2>
       <p>
