--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cabin|Ibarra+Real+Nova&display=swap" rel="stylesheet">
 </head>
 <body>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
