--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
         
         <header id="main">
-          <h1>Ceran Budak</h1>
+          <h1>Ceren Budak</h1>
         </header>
 
         <div class="headshot-image">
@@ -63,7 +63,7 @@
   
         <footer>
           <p>University of Michigan School of Information <br/>
-            &copy; Ceran Budak 2019-2020</p>
+            &copy; Ceren Budak 2019-2020</p>
         </footer>
       </body>
     </html>
