--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cabin|Ibarra+Real+Nova&display=swap" rel="stylesheet">
 </head>
 <body>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
@@ -33,7 +32,7 @@
 
         <footer>
           <p>University of Michigan School of Information <br/>
-            &copy; Ceran Budak 2019-2020</p>
+            &copy; Ceren Budak 2019-2020</p>
         </footer>
       </body>
     </html>
