--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         <div class="container">
 
         <header id="main">
-          <h1>Ceran Budak</h1>
+          <h1>Ceren Budak</h1>
         </header>
 
         <h2>Projects</h2>
@@ -156,7 +156,7 @@
 
         <footer>
           <p>University of Michigan School of Information <br/>
-            &copy; Ceran Budak 2019-2020</p>
+            &copy; Ceren Budak 2019-2020</p>
         </footer>
       </body>
     </html>
