--- a/publications.html
+++ b/publications.html
@@ -122,7 +122,7 @@
 
         <footer>
           <p>University of Michigan School of Information <br/>
-            &copy; Ceran Budak 2019-2020</p>
+            &copy; Ceren Budak 2019-2020</p>
         </footer>
       </body>
     </html>
