--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,6 @@
 </head>
 <body>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
-        <div class="container">
         <div class="nav">
           <nav>
             <ul class='nav-links'>
@@ -21,6 +20,8 @@
             </ul>
           </nav>
         </div>
+        <div class="container">
+
         <header id="main">
           <h1>Ceren Budak</h1>
         </header>
@@ -30,7 +31,7 @@
           <!-- Bootstrap core JavaScript, need to download Bootstrap to use...check if necessary. -->
           <!-- <script src="./files/jquery.min.js.download"></script>
           <script src="./files/bootstrap.bundle.min.js.download"></script> -->
-
+</div>
         <footer>
           <p>University of Michigan School of Information <br/>
             &copy; Ceren Budak 2019-2020</p>
