--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
           <h1>Ceren Budak</h1>
         </header>
 
-        <div class="headshot-image">
+        <div class="img">
           <img src="images/cerenbudak_portrait.jpg" alt="">
         </div>
 
+        <div class="about">
 
       <h2>About Me</h2>
       <p>
@@ -57,6 +58,7 @@
         Undergraduate and Masters students who have already been admitted to the University of Michigan and are interested
         in working on computational social science problems are welcome to contact me.
         Include your interests, degree, major, and resume in your email. </p>
+      </div>
 
     </div>
 
