--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="style/html5reset.css"> 
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ibarra+Real+Nova&display=swap" rel="stylesheet">
 </head>
@@ -33,7 +33,7 @@
 
         <h3 id="media">News Media Production &amp; Consumption</h3>
 
-        <div class="newsmedia-image">
+        <div class="img">
           <img src="images/newsmedia.jpg" alt="">
         </div>
 
@@ -52,7 +52,7 @@
 
           <h3 id="movements">Social Movements &amp; Media</h3>
 
-          <div class="socialmovements-image">
+          <div class="img">
             <img src="images/socialmedia.jpg" alt="">
           </div>
 
@@ -81,7 +81,7 @@
 
           <h3 id="networks">Social Networks</h3>
 
-          <div class="network-image">
+          <div class="img">
             <img src="images/network.jpg" alt="">
           </div>
 
@@ -108,7 +108,7 @@
 
           <h3 id="deliberation">Measuring and Promoting the Quality of Online Discussions</h3>
 
-          <div class="onlinediscussion-image">
+          <div class="img">
             <img src="images/discussions.jpg" alt="">
           </div>
 
@@ -127,7 +127,7 @@
 
           <h3 id="charity">Charitable Giving</h3>
 
-          <div class="charity-image">
+          <div class="img">
             <img src="images/charity.jpg" alt="">
           </div>
 
