--- a/publications.html
+++ b/publications.html
@@ -9,7 +9,6 @@
 </head>
 <body>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
-        <div class="container">
         <div class="nav">
           <nav>
             <ul class='nav-links'>
@@ -22,6 +21,8 @@
             </ul>
           </nav>
         </div>
+        <div class="container">
+
         <header id="main">
           <h1>Ceren Budak</h1>
         </header>
@@ -119,7 +120,7 @@
           <h3><a target="_blank" href="https://www.microsoft.com/en-us/research/publication/inferring-user-interests-from-microblogs/?from=http%3A%2F%2Fresearch.microsoft.com%2Fapps%2Fpubs%2Fdefault.aspx%3Fid%3D217311">Inferring User Interests in Online Social Networks</a></h3>
             <h4>Ceren Budak, Anitha Kannan (Microsoft Research), Rakesh Agrawal (Microsoft Research), Jan Pedersen (Microsoft)</h4>
               <p>Working Paper, MSR-TR-2014-68, May 2014</p>
-
+</div>
         <footer>
           <p>University of Michigan School of Information <br/>
             &copy; Ceren Budak 2019-2020</p>
