--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>Ceren Budak</h1>
         </header>
 
-        <div class="img">
+        <div class="profile-img">
           <img src="images/cerenbudak_portrait.jpg" alt="">
         </div>
 
