--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style/html5reset.css"> 
+    <link rel="stylesheet" type="text/css" href="style/html5reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ibarra+Real+Nova&display=swap" rel="stylesheet">
 </head>
@@ -28,7 +28,7 @@
         <header id="main">
           <h1>Ceren Budak</h1>
         </header>
-
+        <div class = "text">
         <h2>Projects</h2>
 
         <h3 id="media">News Media Production &amp; Consumption</h3>
@@ -151,7 +151,7 @@
           <p>Let's think of another question: Why do people care about the causes that they do? Does exposure increase interest?
           We are currently working on this problem in the context of poverty and homelessness. Stay tuned for our results...</p>
 
-
+        </div>
     </div>
 
         <footer>
