--- a/engagement.html
+++ b/engagement.html
@@ -24,6 +24,7 @@
           <h1>Ceren Budak</h1>
         </header>
         <div class="container">
+          <div class = "text">
             <div class="teaching">
                 <h2>Teaching</h2>
                 <p>I teach two courses at UMSI: SI 608 - Networks and SI 618 - Data Manipulation and Analysis.</p>
@@ -116,7 +117,7 @@
                     <p class='li'><a target = _blank a href='https://www.microsoft.com/en-us/research/academic-program/data-science-summer-school/'>For more info, please visit the website.</a></p>
                   </li>
                 </ul>
-
+              </div>
             </div>
         </div>
         <footer>
