--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,7 @@
         <header id="main">
           <h1>Ceren Budak</h1>
         </header>
+        <div class = "text" >
         <h2>Published</h2>
           <h3><a target="_blank" href="./files/fakenews.pdf">What happened? The Spread of Fake News Publisher Content During the 2016 U.S. Presidential Election</a></h3>
             <h4>Ceren Budak</h4>
@@ -120,6 +121,7 @@
           <h3><a target="_blank" href="https://www.microsoft.com/en-us/research/publication/inferring-user-interests-from-microblogs/?from=http%3A%2F%2Fresearch.microsoft.com%2Fapps%2Fpubs%2Fdefault.aspx%3Fid%3D217311">Inferring User Interests in Online Social Networks</a></h3>
             <h4>Ceren Budak, Anitha Kannan (Microsoft Research), Rakesh Agrawal (Microsoft Research), Jan Pedersen (Microsoft)</h4>
               <p>Working Paper, MSR-TR-2014-68, May 2014</p>
+      </div>
 </div>
         <footer>
           <p>University of Michigan School of Information <br/>
