--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style/html5reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ibarra+Real+Nova&display=swap" rel="stylesheet">
-</head>
+    <title>Projects</title>
+  </head>
 <body>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
 
@@ -28,15 +29,17 @@
         <header id="main">
           <h1>Ceren Budak</h1>
         </header>
-        <div class = "text">
-        <h2>Projects</h2>
 
+        <!-- <div class = "text"> -->
+        <h2>Projects</h2>
         <h3 id="media">News Media Production &amp; Consumption</h3>
 
-        <div class="img">
+        <div class="news-img">
           <img src="images/newsmedia.jpg" alt="">
         </div>
 
+
+        <div class= "news-text">
         <p>News media are a key source of information for society. How is this source of information produced and how is it consumed? Are news outlets biased? Do readers prefer ideologically biased content?</p>
 
         <p>In a <a target=_blank a href="https://academic.oup.com/poq/article/80/S1/250/2223443">recent work</a>, we examined issue filtering and ideological framing in U.S. news media. Through the use
@@ -49,12 +52,15 @@
           <p> The spread of fake news online is raising serious concerns. We are working on a number of projects to model and quantify such behavior. One example is <a target=_blank a href="files/fakenews.pdf">here</a>. In this paper, we examined the spread of fake news leading up to the 2016 U.S. Presidential elections.</p>
 
           <p>In an upcoming <a target=_blank a href="https://www.brookings.edu/book/words-that-matter/">book project</a>, we examine how the news media covered the extraordinary 2016 election, how people reacted to it on social media platforms, and what stuck with the voters. This book is scheduled to be released January 2020.</p>
+        </div>
 
           <h3 id="movements">Social Movements &amp; Media</h3>
 
-          <div class="img">
+          <div class="socialmedia-img">
             <img src="images/socialmedia.jpg" alt="">
           </div>
+
+          <div class='social-text'>
 
           <p>
               Studies of social movements have traditionally relied on ethnographic methods to learn about
@@ -78,12 +84,15 @@
               We are currently working on determining the value of Social Movement Organizations(SMOs) in online protest movements (a working paper is available <a target=_blank a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3068546">here</a>), measuring stickiness of activism and identifying the most (and least) successful recruitment methods.
               We are also working on new mathematical models of collective action that incorporate the new findings from our data-driven studies.
           </p>
+        </div>
 
           <h3 id="networks">Social Networks</h3>
 
-          <div class="img">
+          <div class="network-img">
             <img src="images/network.jpg" alt="">
           </div>
+
+          <div class="network-text">
 
           <p>The power of online social networks lies in their ability to enable the diffusion of information, ideas, and innovations.
               This significance motivates our work that focuses on understanding the diffusion process, and using this understanding to build technological solutions to facilitate and guide such spread.
@@ -104,13 +113,15 @@
 
           <p>Group Dynamics: In Bowling Alone: The Collapse and Revival of American Community, Robert D. Putnam discusses how we are fast becoming disconnected from family, friends, and our democratic structures. Online groups present a possible remedy here. But most online groups are short-lived given their inability to sustain members. So, what makes people stick? Can we predict it? For more, <a target=_blank a href="http://dl.acm.org/citation.cfm?id=2488404">go here</a>.
           </p>
-
+        </div>
 
           <h3 id="deliberation">Measuring and Promoting the Quality of Online Discussions</h3>
 
-          <div class="img">
+          <div class="diss-img">
             <img src="images/discussions.jpg" alt="">
           </div>
+
+          <div class=diss-text>
 
           <p>The National Science Foundation has funded our collaborative research project, <a target=_blank a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1717965">Measuring and Promoting the Quality of Online News Discussions?</a>. The project is a joint effort between researchers at the University of Michigan School of Information (<a target=_blank a href="http://presnick.people.si.umich.edu/">Paul Resnick</a>) and the Ohio State University School of Communication (<a target=_blank a href="http://rkellygarrett.com/">R. Kelly Garrett</a>).</p>
 
@@ -124,12 +135,14 @@
           opportunity to examine the influence of that design feature. In a <a target=_blank a href="files/threading.pdf">recent paper</a>, we studied this naturally occurring experiment to investigate the impact of conversation threading on user retention as
           mediated by several potential changes in conversation structure and style and provided an array of recommendations for designers of news commenting sites. </p>
 
-
+        </div>
           <h3 id="charity">Charitable Giving</h3>
 
-          <div class="img">
+          <div class="charity-img">
             <img src="images/charity.jpg" alt="">
           </div>
+
+          <div class="charity-text">
 
           <p>How do people make charitable giving decisions? Scholars had to rely on small surveys or experiments to answer this question. Here, we ask the question: can we do better
           by making use of data that is publicly available online (such as charity evaluation sites and donor reviews) as well as web browsing
@@ -150,8 +163,8 @@
 
           <p>Let's think of another question: Why do people care about the causes that they do? Does exposure increase interest?
           We are currently working on this problem in the context of poverty and homelessness. Stay tuned for our results...</p>
-
-        </div>
+    </div>
+        <!-- </div> -->
     </div>
 
         <footer>
