--- a/engagement.html
+++ b/engagement.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style/html5reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ibarra+Real+Nova&display=swap" rel="stylesheet">
-</head>
+    <title>Engagement</title>
+  </head>
 <body>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <div class="nav">
