--- a/cv.html
+++ b/cv.html
@@ -9,6 +9,7 @@
     <title>CV</title>
   </head>
 <body>
+    <main>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <div class="nav">
           <nav>
@@ -37,5 +38,6 @@
           <p>University of Michigan School of Information <br/>
             &copy; Ceren Budak 2019-2020</p>
         </footer>
+        </main>
       </body>
     </html>
