--- a/engagement.html
+++ b/engagement.html
@@ -9,6 +9,7 @@
     <title>Engagement</title>
   </head>
 <body>
+    <main>
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
         <div class="nav">
           <nav>
@@ -125,5 +126,6 @@
           <p>University of Michigan School of Information <br/>
             &copy; Ceran Budak 2019-2020</p>
         </footer>
+        </main>
       </body>
     </html>
