--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Ceren Budak</title>
 </head>
 <body>
+    <main>
 
         <div class="skip"><a href="#main">Skip to Main Content</a></div>
 
@@ -67,5 +68,6 @@
           <p>University of Michigan School of Information <br/>
             &copy; Ceren Budak 2019-2020</p>
         </footer>
+        </main>
       </body>
     </html>
