--- a/projects.html
+++ b/projects.html
@@ -105,14 +105,14 @@
               takes a strong first step towards attaining reproducibility and testing generalizability in modeling social behavior.
               </p>
 
-          <p>Managing Diffusion: The open nature of online social networks leaves their users vulnerable to the spread of misinformation with possibly devastating implications. Clearly, it is vital to investigate effective methods to limit the spread of misinformation to avoid such societal effects. <a target=_blank a href="http://dl.acm.org/authorize?405373">Our work was</a> the first study to focus on optimally managing the spread of misinformation in online social networks.
+          <p>Managing Diffusion: The open nature of online social networks leaves their users vulnerable to the spread of misinformation with possibly devastating implications. Clearly, it is vital to investigate effective methods to limit the spread of misinformation to avoid such societal effects. <a target="_blank" href="http://dl.acm.org/authorize?405373">Our work was</a> the first study to focus on optimally managing the spread of misinformation in online social networks.
           </p>
 
           <p>Reporting Diffusion: Information trends in online social networks reveal societal needs, fears or interests. They can also help users stay on top of news without having to sift through vast amounts of shared information. We introduced a number of methods (<a target="_blank" href="files/examplestudy1.pdf">example study 1</a>,
           <a target="_blank" href="files/examplestudy2.pdf">example study 2</a>) that improve the state-of-the-art in this area.
           </p>
 
-          <p>Group Dynamics: In Bowling Alone: The Collapse and Revival of American Community, Robert D. Putnam discusses how we are fast becoming disconnected from family, friends, and our democratic structures. Online groups present a possible remedy here. But most online groups are short-lived given their inability to sustain members. So, what makes people stick? Can we predict it? For more, <a target=_blank a href="http://dl.acm.org/citation.cfm?id=2488404">go here</a>.
+          <p>Group Dynamics: In Bowling Alone: The Collapse and Revival of American Community, Robert D. Putnam discusses how we are fast becoming disconnected from family, friends, and our democratic structures. Online groups present a possible remedy here. But most online groups are short-lived given their inability to sustain members. So, what makes people stick? Can we predict it? For more, <a target="_blank" href="http://dl.acm.org/citation.cfm?id=2488404">go here</a>.
           </p>
         </div>
 
