--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h2>Prospective Students</h3>
 
       <p>Prospective PhD students must first be admitted to UMSI's PhD program before they can work with an individual advisor.
-        If you are interested in working with me, please first <a target='_blank'a href="https://www.si.umich.edu/academics/admissions/phd-application-requirements">apply</a> to our program and then drop me an email.
+        If you are interested in working with me, please first <a target='_blank' href="https://www.si.umich.edu/academics/admissions/phd-application-requirements">apply</a> to our program and then drop me an email.
         Undergraduate and Masters students who have already been admitted to the University of Michigan and are interested
         in working on computational social science problems are welcome to contact me.
         Include your interests, degree, major, and resume in your email. </p>
