--- a/engagement.html
+++ b/engagement.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style/html5reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cabin|Ibarra+Real+Nova&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href= "https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap" rel="stylesheet">
     <title>Engagement</title>
   </head>
 <body>
@@ -35,7 +36,7 @@
                 <p>This course covers topics in network analysis, from social networks to applications in information networks such as the internet. We introduce basic concepts in network theory, discuss metric and models, use software analysis tools to experiment with a wide variety of real-world network data, and study applications to areas such as information retrieval.</p>
 
                 <h3><a target = "_blank" href = 'https://www.si.umich.edu/programs/courses/618'>SI 618 - Data Manipulation and Analysis</a></h3>
-                <p>This course aims to help students get started with their own data harvesting, processing, aggregation, and analysis. We cover a wide variety of topics such as using APIs to collect data, SQL, Spark through Python. We use R to perform exploratory data analysis. We use <a target = _blank a href = 'https://www.datacamp.com/'>DataCamp</a> for lab assignments for this part of the class so that our students can learn R in an interactive way.</p>
+                <p>This course aims to help students get started with their own data harvesting, processing, aggregation, and analysis. We cover a wide variety of topics such as using APIs to collect data, SQL, Spark through Python. We use R to perform exploratory data analysis. We use <a target = "_blank" href = 'https://www.datacamp.com/'>DataCamp</a> for lab assignments for this part of the class so that our students can learn R in an interactive way.</p>
             </div>
             <div class="talks">
               <h2>Invited Talks</h2>
