--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style/html5reset.css">
     <link rel="stylesheet" type="text/css" href="style/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cabin|Ibarra+Real+Nova&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href= "https://fonts.googleapis.com/css?family=Ibarra+Real+Nova&display=swap" rel="stylesheet">
     <title>Ceren Budak</title>
 </head>
 <body>
@@ -52,7 +53,7 @@
       political, and policy implications.
       </p>
 
-      <h2>Prospective Students</h3>
+      <h2>Prospective Students</h2>
 
       <p>Prospective PhD students must first be admitted to UMSI's PhD program before they can work with an individual advisor.
         If you are interested in working with me, please first <a target='_blank' href="https://www.si.umich.edu/academics/admissions/phd-application-requirements">apply</a> to our program and then drop me an email.
