--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
         <header id="main">
           <h1>Ceren Budak</h1>
         </header>
-          <iframe src="./files/cv.pdf"></iframe>
+          <iframe src="./files/cv.pdf" title="Resume"></iframe>
 
           <form method="get" action="./files/cv.pdf" target="_blank"><button type="submit">Download Resume</button></form>
           <!-- Bootstrap core JavaScript, need to download Bootstrap to use...check if necessary. -->
