Edited footer, iframe border, image formatting

--- a/engagement.html
+++ b/engagement.html
@@ -125,7 +125,8 @@
         </div>
         <footer>
           <p>University of Michigan School of Information <br/>
-            &copy; Ceran Budak 2019-2020</p>
+            &copy; Ceren Budak 2019-2020<br/>
+            Mail: cbudak@umich.edu | Twitter: @cerenbudak | Office: 3336 NQ</p>
         </footer>
         </main>
       </body>
