--- a/projects.html
+++ b/projects.html
@@ -171,7 +171,8 @@
 
         <footer>
           <p>University of Michigan School of Information <br/>
-            &copy; Ceren Budak 2019-2020</p>
+            &copy; Ceren Budak 2019-2020<br/>
+            Mail: cbudak@umich.edu | Twitter: @cerenbudak | Office: 3336 NQ</p>
         </footer>
         </main>
       </body>
